--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
     <header>
         <div class="logo-nav-container">
-            <div class="logo-and-name"> <img src="assets/company_logo.png" alt="Company Logo">
-                <span class="company-name">My Local Tradie</span> </div>
+            <div class="logo-and-name"> 
+                <img src="assets/company_logo.png" alt="Company Logo">
+                <span class="company-name">My Local Tradie</span>
+            </div>
         </div>
     </header>
     <main>
         <div id="home" class="section">
             <div class="hero">
-                <img src="assets/hero-image.jpg" alt="Hero Image">
+                <img src="assets/hero_image.jpg" alt="Hero Image">
                 <div class="hero-text">
                     <h1>Find Trusted Tradies in FNQ - Fast &amp; Easy</h1>
                     <p>My Local Tradie makes it easy to browse available tradies, see contact info, and get quotes quickly.</p>
@@ -32,10 +34,10 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        My Local Tradie is your one-stop shop for finding trusted tradies in Far North Queensland. Your time is valuable, so we've made it easy to search for local professionals, see their contact information, and get quotes quickly. <br> <br> No more wasted phone calls, no more endless waiting.
+                        My Local Tradie is your one-stop shop for finding trusted tradies in Far North Queensland. Your time is valuable, so we've made it easy to search for local professionals, see their contact information, and get quotes quickly. <br> <br> <strong>No more wasted phone calls, no more endless waiting.</strong>
                     </p>
                     <p>
-                        We're committed to providing a simple, efficient, and reliable platform that connects homeowners with the best tradies in FNQ. <br> <br> Whether you're tackling a small repair or a major renovation, we are here to help you find the right professional for the job.
+                        We're committed to providing a simple, efficient, and reliable platform that connects homeowners with the best tradies in FNQ. Whether you're tackling a small repair or a major renovation, we are here to help you find the right professional for the job.
                     </p>
                     <a href="#find-a-tradie" class="cta-button">Find Local Tradies</a>
                 </div>
@@ -47,18 +49,18 @@
 
         <div id="services" class="section">
             <h2>What We Offer</h2>
-            <div class="specialties-grid">
-                <div class="specialty">
+            <div class="offerings-grid"> 
+                <div class="offering"> 
                     <img src="assets/carpentry_icon.png" alt="Carpentry">
                     <h3>Carpentry</h3>
                     <p>From framing to finishing, our carpenters bring your vision to life.</p>
                 </div>
-                <div class="specialty">
+                <div class="offering"> 
                     <img src="assets/plumbing_icon.png" alt="Plumbing">
                     <h3>Plumbing</h3>
-                    <p>Leaking pipes, clogged drains, and more – our plumbers are here to help.</p>
+                    <p>Leaking pipes, clogged drains, and more - our plumbers are here to help.</p>
                 </div>
-                <div class="specialty">
+                <div class="offering"> 
                     <img src="assets/electrical_icon.png" alt="Electrical">
                     <h3>Electrical</h3>
                     <p>From installations to repairs, our electricians ensure your safety and comfort.</p>
@@ -67,19 +69,18 @@
             <a href="#find-a-tradie" class="cta-button centered">Find Local Tradies</a>
         </div>
 
-
     </main>
     <footer>
         <p>
-          My Local Tradie FNQ <br>
-          123 Main Street, Cairndale, QLD 48770 <br>
-          <a href="tel:+61740001234">(07)&nbsp;4000&nbsp;1234</a> <br>
-          <a href="mailto:hello@mylocaltradie.com.au">hello@mylocaltradie.com.au</a> <br>
-          &copy; 2025 My Local Tradie FNQ
+        My Local Tradie FNQ <br>
+        123 Main Street, Cairndale, QLD 48770 <br>
+        <a href="tel:+61740001234">(07)&nbsp;4000&nbsp;1234</a> <br>
+        <a href="mailto:hello@mylocaltradie.com.au">hello@mylocaltradie.com.au</a> <br>
+        &copy; 2025 My Local Tradie FNQ
         </p>
         <div class="social-icons">
-          <a href="#" target="_blank"><img src="assets/facebook_icon.png" alt="Facebook"></a>
+            <a href="#" target="_blank"><img src="assets/facebook_icon.png" alt="Facebook"></a>
         </div>
-      </footer>
+    </footer>
 </body>
 </html>
